# pilot-link

./: .cvsignore  .gitignore  ChangeLog  CodingGuidelines  DB-sync.c  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.os2  Makefile.os2.in  NEWS  README  README.md  TODO  acconfig.h  acinclude.m4  aclocal.m4  address-db.c  addresses.c  all-sync.c  autogen.sh  build-deb.sh  build-debian.sh  build.logfile  ccexample.cc  cmp.h  config.cache  config.status  config.uue  configure  configure.ac  configure.in  configure.scan  datebook-db.c  debugsh.c  dlp.c  dlpsh.c  getopt.c  getopt1.c  (+62 more)
bindings/: Makefile.am  README  README.de  libjpisock.c  libjpisock.h  test.java
bindings/Java/: .cvsignore  Jni.c  Makefile.am  MidiMgr.java  README  README.de  doConstants.c  libjpisock.c  libjpisock.h  test.java
bindings/Perl/: Makefile.PL.in  Pilot.pm  Pilot.xs  dump.pl  h2xs-pilot-link  test.pl  typemap
bindings/Python/: NEWS  README  TODO  pisockextras.py  setup-standalone.py.in  setup.py  setup.py.in  test.py  test.sh
bindings/Tcl/: .cvsignore  Makefile.am  Makefile.in  pitcl.c  test.tcl
doc/: .cvsignore  60-libpisock.rules  CodingGuidelines  Makefile.am  README  README.debugging  README.freebsd  README.libusb  README.usb  TODO  doxygen.cfg.in  doxygen_main_page.c  logging.txt  syncabs.sgml
doc/dox/: doxygen.css  footer.html  header.html
doc/man/: .cvsignore  Makefile.am  README  addresses.1  addresses.1.in  debugsh.1.in  dlpsh.1  dlpsh.1.in  hinotes.1.in  ietf2datebook.1  ietf2datebook.1.in  install-datebook.1  install-datebook.1.in  install-expenses.1  install-expenses.1.in  install-hinote.1  install-hinote.1.in  install-memo.1  install-memo.1.in  install-netsync.1  install-netsync.1.in  install-todo.1.in  install-todos.1.in  install-user.1  install-user.1.in  memos.1.in  money2qif.1.in  pi-csd.1.in  pi-getram.1  pi-getram.1.in  pi-getrom.1  pi-getrom.1.in  pi-getromtoken.1.in  pi-nredir.1.in  pilot-addresses.1  pilot-addresses.1.in  pilot-archive.1.in  pilot-clip.1.in  pilot-dedupe.1.in  pilot-file.1.in  (+19 more)
doc/xml/: .cvsignore  Makefile.am  README  addresses.xml  catalog.xml.in  debugsh.xml  dlpsh.xml  docbook.xsl.in  hinotes.xml  ietf2datebook.xml  install-datebook.xml  install-expenses.xml  install-hinote.xml  install-memo.xml  install-netsync.xml  install-todo.xml  install-todos.xml  install-user.xml  memos.xml  money2qif.xml  pi-csd.xml  pi-getram.xml  pi-getromtoken.xml  pi-nredir.xml  pilot-650foto.xml  pilot-addresses.xml  pilot-archive.xml  pilot-clip.xml  pilot-csd.xml  pilot-debugsh.xml  pilot-dedupe.xml  pilot-dlpsh.xml  pilot-file.xml  pilot-foto-treo600.xml  pilot-foto-treo650.xml  pilot-foto.xml  pilot-getram.xml  pilot-getrom.xml  pilot-getromtoken.xml  pilot-hinotes.xml  (+33 more)
include/: .cvsignore  Makefile.am  address.h  cmp.h  darwinusbcore.h  datebook.h  dlp.h  i18n.h  memo.h  padp.h  pdb.h  pi-address.h  pi-address.hxx  pi-appinfo.h  pi-appinfo.hxx  pi-args.h  pi-blob.h  pi-bluetooth.h  pi-buffer.h  pi-calendar.h  pi-cmp.h  pi-config.h  pi-config.h.in  pi-contact.h  pi-datebook.h  pi-datebook.hxx  pi-debug.h  pi-dlp.h  pi-dlp.hxx  pi-error.h  pi-expense.h  pi-file.h  pi-foto.h  pi-header.h  pi-hinote.h  pi-iambicExpense.h  pi-iambicExpense.hxx  pi-inet.h  pi-inetserial.h  pi-location.h  (+36 more)
libcc/: Makefile  Makefile.am  Makefile.in  Makefile.os2  address.cc  appInfo.cc  datebook.cc  dlp.cc  iambicExpense.cc  memo.cc  pi-dlp.hxx  pi-memo.hxx  todo.cc
libpisock/: .cvsignore  Makefile.am  address.c  appinfo.c  blob.c  bluetooth.c  calendar.c  cmp.c  connect.c  contact.c  darwinusb.c  darwinusbcore.cpp  datebook.c  debug.c  dlp.c  expense.c  freebsdusb.c  hinote.c  inet.c  libusb.c  linuxusb.c  location.c  mail.c  md5.c  memo.c  money.c  net.c  notepad.c  os2serial.c  padp.c  palmpix.c  pi-buffer.c  pi-buffer.lo  pi-file.c  pi-header.c  serial.c  slp.c  socket.c  sync.c  sys.c  (+10 more)
libpisock++/: Makefile.am  Makefile.os2  address.cc  appInfo.cc  datebook.cc  dlp.cc  iambicExpense.cc  memo.cc  todo.cc
libsock/: Makefile  Makefile.am  Makefile.in  Makefile.os2  address.c  appinfo.c  cmp.c  connect.c  datebook.c  debug.c  dlp-backup.c  dlp.c  expense.c  hinote.c  inet.c  inetserial.c  mail.c  md5.c  memo.c  money.c  net.c  os2serial.c  padp.c  pi-address.h  pi-appinfo.h  pi-cmp.h  pi-config.h  pi-dlp.h  pi-expense.h  pi-file.c  pi-header.c  pi-hinote.h  pi-inet.h  pi-macros.h  pi-memo.h  pi-money.h  pi-sockaddr.h  pi-source.h  pi-sync.h  pi-version.h  (+11 more)
src/: .cvsignore  Makefile.am  addresses.c  ccexample.cc  debugsh.c  dlpsh.c  getopt.c  getopt1.c  getrom.c  hinotes.c  iambicexample.cc  install-datebook.c  install-expenses.c  install-hinote.c  install-memo.c  install-netsync.c  install-todo.c  install-todos.c  install-user.c  kittykiller.c  memos.c  money2qif.c  parsedate.c  parsedate.y  pd-tty.c  pi-csd.c  pi-getram.c  pi-getrom.c  pi-getromtoken.c  pi-nredir.c  pi-port.c  pilot-650foto.c  pilot-addresses.c  pilot-archive.c  pilot-clip.c  pilot-contacts.c  pilot-csd.c  pilot-debug.c  pilot-debugsh.c  pilot-dedupe.c  (+49 more)
src/pilot-datebook/: .cvsignore  Makefile.am  Makefile.in  README  getopt.c  parsedate.c  pilot-datebook-compare.c  pilot-datebook-compare.h  pilot-datebook-csv.c  pilot-datebook-csv.h  pilot-datebook-data.c  pilot-datebook-data.h  pilot-datebook-hotsync.c  pilot-datebook-hotsync.h  pilot-datebook-ical.c  pilot-datebook-ical.h  pilot-datebook-io.c  (+22 more)
tests/: .cvsignore  Makefile  Makefile.am  Makefile.in  Makefile.os2  calendardb-test.c  contactsdb-test.c  dlp-test.c  locationdb-test.c  packers.c  pilot-xfer_list_D.sh  versamail-test.c  vfs-test.c
tools/: .cvsignore  Makefile.am  README  addresses.c  debugsh.c  dlpsh.c  getopt1.c  getrom.c  hinotes.c  install-datebook.c  install-hinote.c  install-memo.c  install-todos.c  install-user.c  kittykiller.c  memos.c  money2qif.c  parsedate.c  pd-tty.c  pi-csd.c  pi-getram.c  pi-getrom.c  pi-nredir.c  pi-port.c  pilot-addresses.c  pilot-clip.c  pilot-debug.c  pilot-dedupe.c  pilot-file.c  pilot-mail.c  pilot-prc.c  pilot-schlep.c  pilot-xfer.c  read-expenses.c  read-ical.c  read-todos.c  reminders.c  validate.cc
(+5550 files in other folders)
